--- a/install
+++ b/install
@@ -2,24 +2,8 @@
 # Author: Alexis Moins
 # Creation: 01 aug 2021
 
-# Location of the `.dotfiles` directory
-dotfiles="${0:h}"
+# Create the needed directories for `vim`
+[[ ! -d ".vim/.undo" ]] && mkdir -v ".vim/.undo"
 
-# Directories needed in order for vim to work correctly
-[[ ! -d "${dotfiles}/.vim/.undo" ]] && mkdir -v "${dotfiles}/.vim/.undo"
-
-# Directories needed in order for zsh to work correctly
-[[ ! -d "${dotfiles}/.zsh/cache" ]] && mkdir -pv "${dotfiles}/.zsh/cache/completion"
-
-# Files and directories that must be ignored
-ignored=( ".git" ".gitignore" "install" )
-
-# Links all files and directories
-for link in "${dotfiles}/"*(D); do
-     [[ -z "${ignored[(r)${link:t}]}" ]] && ln -fnsv "${link}" "${HOME}/${link:t}"; done
-
-# Configures homebrew based on the Brewfile
-brew bundle --file="${dotfiles}/.Brewfile" --no-lock
-
-# Cleans the environment
-unset dotfiles ignored
+# Create the needed directories for `zsh`
+[[ ! -d ".zsh/cache" ]] && mkdir -pv ".zsh/cache/completion"
