--- a/.zsh/config/history
+++ b/.zsh/config/history
@@ -3,23 +3,23 @@
 # vim: ft=zsh syn=zsh
 
 # Append commands to the history file & import commands from other sessions
-setopt sharehistory
+setopt SHAREHISTORY
 
 # When entering a line with history expansion, perform history expansion and reload the
 # line into the editing buffer
-setopt histverify
+setopt HISTVERIFY
 
 # Do not enter command lines into the history list if they are duplicates of the
 # previous event
-setopt histignoredups
+setopt HISTIGNOREDUPS
 
 # Remove command lines from the history list when the first character on the
 # line is a spacec
-setopt histignorespace
+setopt HISTIGNORESPACE
 
 # Remove superfluous blanks from each command line being added to the history
 # list
-setopt histreduceblanks
+setopt HISTREDUCEBLANKS
 
 # File in which the history will be saved
 HISTFILE="${ZDOTDIR}/.cache/history"
