--- a/install
+++ b/install
@@ -2,22 +2,19 @@
 # Author: Alexis Moins
 # Creation: 29 nov 2021
 
-# List of items that must be present
-init=( ".zsh/.cache" ".vim/.cache" ".vim/bundle" )
-
-# Create missing items
-for item in ${init}; do
-    [[ ! -d "${item}" ]] && \mkdir -pv "${item}"
-done
-
-# Regex matching items that should be ignored
-# ignored="\.git$|\.gitignore|Brewfile|install|terminal"
-
 # Install formulae and casks
 if brew bundle install --no-lock --no-upgrade; then
+    # List of items that must be present
+    init=( ".zsh/.cache" ".vim/.cache" ".vim/bundle" )
+
+    # Create missing items
+    for item in ${init}; do
+        [[ ! -d "${item}" ]] && \mkdir -pv "${item}"; done
+
     # Link dotfiles
     stow --restow --verbose .
+
+    # Clean useless variables
+    unset init ignored
 fi
 
-# Clean useless variables
-unset init ignored
