--- a/install
+++ b/install
@@ -5,7 +5,7 @@
 # Install formulae and casks
 if brew bundle install --no-lock --no-upgrade; then
     # List of items that must be present
-    init=( ".zsh/.cache" ".vim/.cache" ".vim/bundle" "${HOME}/.tmux" )
+    init=( ".zsh/.cache" ".vim/.cache" ".vim/bundle" )
 
     # Create missing items
     for item in ${init}; do
