feat: Migrated from GNU stow to dotbot for symlink management

--- a/zsh/config/history
+++ b/zsh/config/history
@@ -22,7 +22,7 @@ setopt HISTIGNORESPACE
 setopt HISTREDUCEBLANKS
 
 # File in which the history will be saved
-HISTFILE="${ZDOTDIR}/.cache/history"
+HISTFILE="${ZDOTDIR}/cache/history"
 
 # Maximum number of items saved in the session's history
 HISTSIZE=1000000
