--- a/install
+++ b/install
@@ -17,5 +17,5 @@ stow --delete . && stow --stow --verbose .
 
 cp -vf .hyper.js ~/.hyper.js
 
-pipx install httpx
+pipx install httpx[cli]
 pipx install pre-commit
