--- a/install
+++ b/install
@@ -1,17 +1,9 @@
 #!/usr/bin/env bash
-
 set -e
 
 [[ ! -d "${HOME}/.config" ]] && mkdir -v "${HOME}/.config"
 [[ ! -d "${HOME}/code" ]] && mkdir -v "${HOME}/code"
 
-echo `pwd`
-
-ln -sf "$(pwd)/wallpapers" ~/Documents/wallpapers
+ln -sf "$(pwd)/wallpapers" ~/wallpapers
 
 stow --delete . && stow --stow --verbose .
-
-cp -vf .hyper.js ~/.hyper.js
-
-pipx install httpx[cli]
-pipx install pre-commit
