--- a/install
+++ b/install
@@ -1,7 +1,16 @@
 #!/usr/bin/env bash
 set -e
 
-[[ ! -d "${HOME}/.config" ]] && mkdir -v "${HOME}/.config"
-[[ ! -d "${HOME}/dev" ]] && mkdir -v "${HOME}/dev"
+function make_dir {
+    if [[ ! -d "${1}" ]]; then
+        mkdir -pv "${1}"
+    fi
+}
+
+make_dir "${HOME}/.config"
+make_dir "${HOME}/dev"
+
+make_dir "${HOME}/notes/work"
+make_dir "${HOME}/notes/school"
 
 stow --delete . && stow --stow --verbose .
